--- a/app_adapter/src/main/resources/templates/conta/cadastro.html
+++ b/app_adapter/src/main/resources/templates/conta/cadastro.html
@@ -1,255 +1,175 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cadastro de Cliente</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            display: flex;
-            overflow: hidden;
-        }
+    <script th:src="@{/css/cadastro.css}"></script>
+  </head>
 
-        .form-container {
-            background-color: #fff;
-            padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            height: 80%;
-            max-width: 500px;
-        }
-
-        .form-container h1 {
-            text-align: center;
-            margin-bottom: 1rem;
-            color: #333;
-        }
-
-        .form-group {
-            margin-bottom: 1rem;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 0.75rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 1rem;
-        }
-
-        .form-group input:focus {
-            border-color: #007bff;
-            outline: none;
-        }
-
-        .btn {
-            display: block;
-            width: 100%;
-            padding: 0.75rem;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            font-size: 1rem;
-            cursor: pointer;
-            margin-top: 1rem;
-        }
-
-        .btn:hover {
-            background-color: #0056b3;
-        }
-
-        .btn-login {
-            color: #FFF;
-            text-decoration: none;
-            padding: 0;
-            border: none;
-            background: none;
-            font-size: 1rem;
-            cursor: pointer;
-
-        }
-
-        .btn-login:hover {
-            text-decoration: underline;
-        }
-
-        .modal-dialog {
-            max-width: 400px;
-        }
-
-        .modal-content {
-            border-radius: 8px;
-            padding: 1.5rem;
-        }
-
-        .modal-footer {
-            justify-content: center;
-        }
-
-        .form-control.form-select.form-select-sm {
-            font-size: 0.875rem;
-            /* Tamanho da fonte menor */
-            padding: 0.375rem 0.75rem;
-            /* Menos preenchimento */
-            height: auto;
-            /* Ajusta a altura */
-        }
-
-        #loginCad {
-            background-color: white;
-            color: #0056b3;
-        }
-    </style>
-</head>
-
-<body>
+  <body>
     <div class="form-container">
-        <h1>Cadastro de Cliente</h1>
-        <form th:action="@{/clientes}" method="POST" th:object="${cliente}">
-            <input type="number" th:field="*{saldo}" hidden value="0.0">
+      <h1>Cadastro de Cliente</h1>
+      <form th:action="@{/clientes}" method="POST" th:object="${cliente}">
+        <input type="number" th:field="*{saldo}" hidden value="0.0" />
 
-            <div class="form-group">
-                <label for="nome">Nome</label>
-                <input th:field="*{nome}" type="text" id="nome" name="nome" placeholder="Digite seu nome" required>
-            </div>
-            <div class="form-group">
-                <label for="cpf-email">CPF</label>
-                <input th:field="*{cpf}"  type="text" id="cpf-email" name="cpf-email" placeholder="Digite seu CPF" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input th:field="*{email}" type="email" id="email" name="email" placeholder="Digite seu email" required>
-            </div>
-            <div class="form-group">
-                <label for="telefone">Telefone</label>
-                <input th:field="*{telefone}" type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone"
-                    required pattern="\d{10,11}">
-                <p class="small-text">Inclua o DDD, apenas números.</p>
-            </div>
-            <div class="form-group">
-                <label for="senha">Senha</label>
-                <input th:field="*{senha}" type="password" id="senha" name="senha" placeholder="Digite sua senha"
-                    required minlength="8">
-                <p class="small-text">Mínimo de 8 caracteres.</p>
-            </div>
-            <button  type="submit" class="btn">Cadastrar</button>
-
-        </form>
-
-        <div th:fragment="login-button">
-            <!-- Botão "Já tem uma conta? Faça login" -->
-            <p>Já tem uma conta?
-                <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
-                    data-bs-target="#loginModal">
-                    Faça login
-                </button>
-            </p>
-
-            <!-- Modal de Login -->
-            <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form action="/login" method="POST">
-                                <div class="form-group">                         
-                                    <input type="text" id="identificador" name="identificador" class="form-control mt-2"
-                                        placeholder="Digite seu Email" required>
-                                </div>
-                                <div class="form-group mt-3">
-                                    <label for="senha-login">Senha</label>
-                                    <input type="password" id="senha-login" name="senha" class="form-control"
-                                        placeholder="Digite sua senha" required>
-                                </div>
-                                <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
-                                data-bs-target="#loginModal" onclick="realizarLogin()">Faça login</button>
-                            
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="form-group">
+          <label for="nome">Nome</label>
+          <input
+            th:field="*{nome}"
+            type="text"
+            id="nome"
+            name="nome"
+            placeholder="Digite seu nome"
+            required
+          />
         </div>
+        <div class="form-group">
+          <label for="cpf-email">CPF</label>
+          <input
+            th:field="*{cpf}"
+            type="text"
+            id="cpf-email"
+            name="cpf-email"
+            placeholder="Digite seu CPF"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input
+            th:field="*{email}"
+            type="email"
+            id="email"
+            name="email"
+            placeholder="Digite seu email"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="telefone">Telefone</label>
+          <input
+            th:field="*{telefone}"
+            type="tel"
+            id="telefone"
+            name="telefone"
+            placeholder="Digite seu telefone"
+            required
+            pattern="\d{10,11}"
+          />
+          <p class="small-text">Inclua o DDD, apenas números.</p>
+        </div>
+        <div class="form-group">
+          <label for="senha">Senha</label>
+          <input
+            th:field="*{senha}"
+            type="password"
+            id="senha"
+            name="senha"
+            placeholder="Digite sua senha"
+            required
+            minlength="8"
+          />
+          <p class="small-text">Mínimo de 8 caracteres.</p>
+        </div>
+        <button type="submit" class="btn">Cadastrar</button>
+      </form>
+
+      <div th:fragment="login-button">
+        <!-- Botão "Já tem uma conta? Faça login" -->
+        <p>
+          Já tem uma conta?
+          <button
+            type="button"
+            id="loginCad"
+            class="btn btn-link p-0 text-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#loginModal"
+          >
+            Faça login
+          </button>
+        </p>
+
+        <!-- Modal de Login -->
+        <div
+          class="modal fade"
+          id="loginModal"
+          tabindex="-1"
+          aria-labelledby="loginModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <form action="/login" method="POST">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      id="identificador"
+                      name="identificador"
+                      class="form-control mt-2"
+                      placeholder="Digite seu Email"
+                      required
+                    />
+                  </div>
+                  <div class="form-group mt-3">
+                    <label for="senha-login">Senha</label>
+                    <input
+                      type="password"
+                      id="senha-login"
+                      name="senha"
+                      class="form-control"
+                      placeholder="Digite sua senha"
+                      required
+                    />
+                  </div>
+                  <button
+                    type="button"
+                    id="loginCad"
+                    class="btn btn-link p-0 text-primary"
+                    data-bs-toggle="modal"
+                    data-bs-target="#loginModal"
+                    onclick="realizarLogin()"
+                  >
+                    Faça login
+                  </button>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Fechar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Máscara de CPF e E-mail no Modal -->
-    <script>
-        $(document).ready(function () {
-
-            var input = $('#cpf-email');
-            var select = $('#cpf-email-select');
-
-
-
-            // Aplica a máscara de CPF inicialmente
-            input.mask('000.000.000-00', { placeholder: '_._._-__' });
-
-            // Detecta mudança no select e aplica a máscara ou libera o input
-            select.change(function () {
-                var selectedOption = select.val();
-
-                if (selectedOption === 'cpf') {
-                    input.mask('000.000.000-00');  // Aplica a máscara de CPF
-                    input.val('');  // Limpa o valor caso tenha sido digitado um e-mail
-                } else {
-                    input.unmask();  // Remove a máscara
-                }
-            });
-
-            // Detecta se o campo de input contém '@', e se for e-mail, remove a máscara
-            input.on('input', function () {
-                var value = input.val();
-
-                if (value.includes('@')) {
-                    input.unmask();  // Remove a máscara para e-mail
-                } else if (select.val() === 'cpf') {
-                    // Se for CPF, aplica a máscara de CPF
-                    input.mask('000.000.000-00');
-                }
-            });
-
-            
-        });
-
-
-
-
-    </script>
-
-
-
-<script th:src="@{/js/login.js}"></script>
-<script th:src="@{/js/cache.js}"></script>
-</body>
-
+    <script th:src="@{/js/cadastro.js}"></script>
+    <script th:src="@{/js/login.js}"></script>
+    <script th:src="@{/js/cache.js}"></script>
+  </body>
 </html>
