--- a/app_adapter/src/main/resources/templates/conta/cadastro.html
+++ b/app_adapter/src/main/resources/templates/conta/cadastro.html
@@ -1,175 +1,123 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro de Cliente</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-    <script th:src="@{/css/cadastro.css}"></script>
-  </head>
 
-  <body>
-    <div class="form-container">
-      <h1>Cadastro de Cliente</h1>
-      <form th:action="@{/clientes}" method="POST" th:object="${cliente}">
-        <input type="number" th:field="*{saldo}" hidden value="0.0" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cadastro de Cliente</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+  <link rel="stylesheet" th:href="@{/css/boleto.css}" />
+    <link rel="stylesheet" th:href="@{/css/geral.css}" />
+    <link rel="stylesheet" th:href="@{/css/cadastro.css}" />
+    <div th:insert="~{/geral :: cssDependencie}"></div>
+</head>
 
-        <div class="form-group">
-          <label for="nome">Nome</label>
-          <input
-            th:field="*{nome}"
-            type="text"
-            id="nome"
-            name="nome"
-            placeholder="Digite seu nome"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="cpf-email">CPF</label>
-          <input
-            th:field="*{cpf}"
-            type="text"
-            id="cpf-email"
-            name="cpf-email"
-            placeholder="Digite seu CPF"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            th:field="*{email}"
-            type="email"
-            id="email"
-            name="email"
-            placeholder="Digite seu email"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="telefone">Telefone</label>
-          <input
-            th:field="*{telefone}"
-            type="tel"
-            id="telefone"
-            name="telefone"
-            placeholder="Digite seu telefone"
-            required
-            pattern="\d{10,11}"
-          />
-          <p class="small-text">Inclua o DDD, apenas números.</p>
-        </div>
-        <div class="form-group">
-          <label for="senha">Senha</label>
-          <input
-            th:field="*{senha}"
-            type="password"
-            id="senha"
-            name="senha"
-            placeholder="Digite sua senha"
-            required
-            minlength="8"
-          />
-          <p class="small-text">Mínimo de 8 caracteres.</p>
-        </div>
-        <button type="submit" class="btn">Cadastrar</button>
-      </form>
+<body>
+  <div style="width: 100%;" th:insert="~{/geral :: barraSuperior}"></div>
 
-      <div th:fragment="login-button">
-        <!-- Botão "Já tem uma conta? Faça login" -->
-        <p>
-          Já tem uma conta?
-          <button
-            type="button"
-            id="loginCad"
-            class="btn btn-link p-0 text-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#loginModal"
-          >
-            Faça login
-          </button>
-        </p>
 
-        <!-- Modal de Login -->
-        <div
-          class="modal fade"
-          id="loginModal"
-          tabindex="-1"
-          aria-labelledby="loginModalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close"
-                ></button>
-              </div>
-              <div class="modal-body">
-                <form action="/login" method="POST">
-                  <div class="form-group">
-                    <input
-                      type="text"
-                      id="identificador"
-                      name="identificador"
-                      class="form-control mt-2"
-                      placeholder="Digite seu Email"
-                      required
-                    />
-                  </div>
-                  <div class="form-group mt-3">
-                    <label for="senha-login">Senha</label>
-                    <input
-                      type="password"
-                      id="senha-login"
-                      name="senha"
-                      class="form-control"
-                      placeholder="Digite sua senha"
-                      required
-                    />
-                  </div>
-                  <button
-                    type="button"
-                    id="loginCad"
-                    class="btn btn-link p-0 text-primary"
-                    data-bs-toggle="modal"
-                    data-bs-target="#loginModal"
-                    onclick="realizarLogin()"
-                  >
-                    Faça login
-                  </button>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-bs-dismiss="modal"
-                >
-                  Fechar
+  <div class="form-container">
+    <h1>Cadastro de Cliente</h1>
+    <form th:action="@{/clientes}" method="POST" th:object="${cliente}">
+      <input type="number" th:field="*{saldo}" hidden value="0.0" />
+
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input th:field="*{nome}" type="text" id="nome" name="nome" placeholder="Digite seu nome" required />
+      </div>
+      <div th:if="${mapCliente != null}" class="colorError">
+        <div th:if="${mapCliente['NOME']}" th:text="'Este Nome já está cadastrado'"></div>
+      </div>
+
+
+
+      <div class="form-group">
+        <label for="cpf-email">CPF</label>
+        <input th:field="*{cpf}" type="text" id="cpf-email" name="cpf-email" placeholder="Digite seu CPF" required />
+      </div>
+
+      <div th:if="${mapCliente != null}" class="colorError">
+        <div th:if="${mapCliente['CPF']}" th:text="'Este CPF já está cadastrado'"></div>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input th:field="*{email}" type="email" id="email" name="email" placeholder="Digite seu email" required />
+      </div>
+      <div th:if="${mapCliente != null}" class="colorError">
+        <div th:if="${mapCliente['EMAIL']}" th:text="'Este Email já está cadastrado'"></div>
+      </div>
+      <div class="form-group">
+        <label for="telefone">Telefone</label>
+        <input th:field="*{telefone}" type="tel" id="telefone" name="telefone" placeholder="Digite seu telefone"
+          required pattern="\d{10,11}" />
+        <p class="small-text">Inclua o DDD, apenas números.</p>
+      </div>
+      <div th:if="${mapCliente != null}" class="colorError">
+        <div th:if="${mapCliente['TELEFONE']}" th:text="'Este Telefone já está cadastrado'"></div>
+      </div>
+      <div class="form-group">
+        <label for="senha">Senha</label>
+        <input th:field="*{senha}" type="password" id="senha" name="senha" placeholder="Digite sua senha" required
+          minlength="8" />
+        <p class="small-text">Mínimo de 8 caracteres.</p>
+      </div>
+      <button type="submit" class="btn">Cadastrar</button>
+    </form>
+
+    <div th:fragment="login-button">
+      <!-- Botão "Já tem uma conta? Faça login" -->
+      <p>
+        Já tem uma conta?
+        <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
+          data-bs-target="#loginModal">
+          Faça login
+        </button>
+      </p>
+
+      <!-- Modal de Login -->
+      <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="loginModalLabel">Login</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <form action="/login" method="POST">
+                <div class="form-group">
+                  <input type="text" id="identificador" name="identificador" class="form-control mt-2"
+                    placeholder="Digite seu Email" required />
+                </div>
+                <div class="form-group mt-3">
+                  <label for="senha-login">Senha</label>
+                  <input type="password" id="senha-login" name="senha" class="form-control"
+                    placeholder="Digite sua senha" required />
+                </div>
+                <button type="button" id="loginCad" class="btn btn-link p-0 text-primary" data-bs-toggle="modal"
+                  data-bs-target="#loginModal" onclick="realizarLogin()">
+                  Faça login
                 </button>
-              </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                Fechar
+              </button>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script th:src="@{/js/cadastro.js}"></script>
-    <script th:src="@{/js/login.js}"></script>
-    <script th:src="@{/js/cache.js}"></script>
-  </body>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script th:src="@{/js/cadastro.js}"></script>
+  <script th:src="@{/js/login.js}"></script>
+  <script th:src="@{/js/cache.js}"></script>
+</body>
+
 </html>
