--- a/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
+++ b/app_adapter/src/main/resources/templates/banco/paginaPrincipal.html
@@ -35,7 +35,7 @@
       </a>
 
       <a
-        th:href="@{/boletos/{id}(id=67489eaecc7140627c4c75d8)}"
+        th:href="@{/boletos/}"
         id="boleto"
         class="linkExtrato"
       >
